Fixing layout bug in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,9 @@ input {
 }
 
 header {
+    width: 90%;
     margin-top: 20px;
+    margin-left:5%;
     padding-bottom: 5px;
     margin-bottom: 5px;
     border-bottom: 2px solid var(--highlight);
@@ -81,7 +83,7 @@ ol li {
 }
 
 #headerdiv {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -102,7 +104,7 @@ ol li {
 }
 
 #time {
-    margin-right: 20px;
+    margin-right: 5%;
 }
 
 main {
